# clangml

./: .gitignore  .gitlab-ci.yml  CHANGES.md  ChangeLog  Dockerfile.sonar  Dockerfile.sonar-clangml  Jenkinsfile  KNOWN_BUGS  Makefile.am  Makefile.in  README  README.md  VERSION  aclocal.m4  autogen.sh  bootstrap.sh  clangml.opam  clangml.opam.template  commit-release-branch.sh  configure  configure.ac  configure_with_log.sh  download_and_build_llvm.sh  dune-project  opam-pin-and-install.sh  release.sh  sonar-project.properties
bootstrap/: attributes.ml  libclang_extensions_attrs.inc  libclang_extensions_attrs_headers.inc
bootstrap/10.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/10.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/11.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/11.1.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/12.0.0/: clang__bindings.ml  clang__bindings.mli
bootstrap/12.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/13.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/13.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/14.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/14.0.4/: clang__bindings.ml  clang__bindings.mli
bootstrap/14.0.5/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/15.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/3.4.2/: clang__bindings.ml  clang__bindings.mli  clang__bindings.mli~  clang__bindings.ml~  clang_stubs.c
bootstrap/3.5.2/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/3.6.2/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/3.7.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/3.8.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/3.9.0/: clang__bindings.ml  clang_stubs.c
bootstrap/3.9.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/4.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/4.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/5.0.0/: clang__bindings.ml  clang__bindings.mli
bootstrap/5.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/5.0.2/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/6.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/6.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/7.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c  clang_stubs.c~
bootstrap/7.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c  clang_stubs.c~
bootstrap/7.1.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/8.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/8.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/9.0.0/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
bootstrap/9.0.1/: clang__bindings.ml  clang__bindings.mli  clang_stubs.c
ci-scripts/: commit-snapshot-branch.sh  download_and_build_llvm.sh  extract_norm.sh  opam-pin-and-install.sh  opam-pin_and_install.sh
clangml/: ast_converter.ml  ast_sig.ml  clang.ml  clang.mli  clang__ast.ml  clang__ast.mli  clang__ast_options.ml  clang__ast_utils.ml  clang__ast_utils.mli  clang__command_line.ml  clang__compat.ml.in  clang__custom.c  clang__custom.h  clang__printer.ml  clang__printer.mli  clang__types.ml  clang__utils.ml  clang__utils.mli  clangml_OperationKinds.def  dune  libclang_extensions.cpp  libclang_extensions.h  printer.ml  printer.mli  special_bindings.ml  standard.ml  stubgen.h
compare/: clangml_compare.ml  clangml_compare.mli  dune
config/: cflags.sexp.in  clangml_config.ml.in  clangml_config.mli  cppflags.sexp.in  dune  ldflags.sexp.in  ldflags_quoted.sexp.in  libs.sexp.in  libs_quoted.sexp.in
dockerfiles/clang16/: Dockerfile  compile-clang.sh  install-clang.sh  prepare-system.sh
dockerfiles/clang16-clangml/: Dockerfile
dockerfiles/gentoo/: Dockerfile
examples/call_graph/: call_graph.ml  dune
examples/functions_with_loop/: dune  functions_with_loop.ml
lift/: clangml_lift.ml  dune
m4/: download.sh
norms/: README.md
ppx/: clangml_ppx.ml  dune  ppx_lexer.mll
printer/: clangml_printer.ml  dune
show/: clangml_show.ml  clangml_show.mli  dune
stubgen/: dune  stubgen.ml
tests/: dune
tests/ast/: dune
tests/c17/: c17.ml  dune
tests/clangml__ast/: dune
tests/compound_expressions/: compound_expressions.ml  dune
tests/cpp/: cpp.ml  dune
tests/ppx/: dune  dune.disabled  ppx.ml
tests_ppx/: dune  tests_ppx.ml
tools/common/: clangml_tools_common.ml  clangml_tools_common.mli
tools/generate_attrs/: dune  generate_attrs.ml
tools/norm_extractor/: dune  kmp.ml  kmp.mli  norm_extractor.ml  tex_lexer.mll
tools/print_tree/: dune  print_tree.ml
tools/stubgen/: dune  stubgen.ml
tools/stubgen_common/: clang_helper.ml  dune  stubgen_common.ml
visitors/: clangml_visitors.ml  dune
