opam-version: "2"
maintainer: "Thierry Martinez <martinez@nsup.org>"
authors: "Thierry Martinez <martinez@nsup.org>"
homepage: "https://gitlab.inria.fr/tmartine/clangml"
bug-reports: "https://gitlab.inria.fr/tmartine/clangml/issues"
license: "BSD"
dev-repo: "https://gitlab.inria.fr/tmartine/clangml.git"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: [make "uninstall"]
depends: ["stdcompat" "conf-clang" "ppx_deriving" "visitors"]
available: [ocaml-version >= "4.02" & ocaml-version < "4.08.0"]
