opam-version: "2.0"
synopsis: "OCaml bindings for Clang API"
description: "clangml provides bindings to call the Clang API from OCaml."
maintainer: "Thierry Martinez <Thierry.Martinez@inria.fr>"
authors: "Thierry Martinez <Thierry.Martinez@inria.fr>"
homepage: "https://gitlab.inria.fr/tmartine/clangml"
bug-reports: "https://gitlab.inria.fr/tmartine/clangml/issues"
license: "BSD"
dev-repo: "https://gitlab.inria.fr/tmartine/clangml.git"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]]
install: [make "install"]
remove: [make "uninstall"]
depends: [
  "stdcompat"
  "conf-clang"
  "ppx_deriving"
  "visitors"
  "dune" {>= "1.2"}
  "ocaml" {>= "4.02.0" & < "4.08.0"}]
