(library
  (name clangml)
  (public_name clangml)
  (wrapped false)
  (c_names clang_stubs)
  (c_flags (:include "../config/cflags.sexp"))
  (cxx_flags --std=c++11 (:include "../config/cflags.sexp"))
  (c_library_flags (:include "../config/ldflags.sexp") (:include "../config/libs.sexp"))
  (cxx_names libclang_extensions)
  (library_flags -linkall)
  (flags -open Stdcompat)
  (libraries unix stdcompat)
  (preprocess (pps ppx_deriving.std))
  (inline_tests (backend ocamlcodoc)))
