(library
  (name clang)
  (public_name clangml)
  (c_names clang_stubs)
  (c_flags (:include "../config/cflags.sexp") -I %{project_root}/../../clangml)
  (cxx_flags --std=c++11 (:include "../config/cxxflags.sexp")
    -I %{project_root}/../../clangml)
  (c_library_flags (:include "../config/ldflags.sexp")
    (:include "../config/libs.sexp"))
  (cxx_names libclang_extensions)
  (library_flags -linkall)
  (flags -open Stdcompat)
  (libraries unix stdcompat clangml_config))
