(library
  (name clang)
  (public_name clangml)
  (foreign_stubs
    (language c)
    (names clang_stubs clang__custom clang_specials)
    (flags (:include "../config/cflags.sexp") -I %{project_root}/../../clangml -fPIC))
  (foreign_stubs
    (language cxx)
    (names libclang_extensions)
    (flags --std=c++11 (:include "../config/cxxflags.sexp")
      -I %{project_root}/../../clangml))
  (c_library_flags (:include "../config/ldflags.sexp")
    (:include "../config/libs.sexp"))
  (library_flags -linkall)
  (preprocess (pps refl.ppx metapp.ppx))
  (preprocessor_deps "../config/clangml_config.cmxs")
; +warning 32: Unused value declaration.
; +warning 34: Unused type declaration.
; -warning 40: Constructor or label name used out of scope. (OCaml <=4.06.0)
  (flags :standard -open Stdcompat -w +32+34-40)
  (libraries unix stdcompat refl metapp clangml_config))
