(test
  (name ast)
  (preprocess (pps pattern.ppx))
  (link_flags -linkall)
; -warning 33: Unused open module.
  (flags -open Stdcompat -w -33)
  (libraries compiler-libs clangml clangml.lift clangml.show pattern.runtime))

(rule
  (targets ast.ml)
  (deps ../../clangml/clang__ast.ml)
  (action (run ocamlcodoc %{deps} -o %{targets})))